--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <form method="post" action="qwe.php">
+    <form method="post" action="index.php">
         Количество столбцов <input type="number" name="cols">
         <br>
         Количество строк <input type="number" name="rows">
